--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-		<meta property="og:image" content="/Photo/LAC05895.png">
+		<meta property="og:image" content="./Photo/LAC05895.png">
 		<title>Phương Nam - Thiên Lý</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
@@ -96,7 +96,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <span class="banner-name">Phương Nam</span><br>
             <span class="banner_location_adress">Út Nam &nbsp;</span>
             <span class="banner-tim">♡</span>
-            <span class="banner_location_adress">&nbsp; Út Nữ</span><br><br>
+            <span class="banner_location_adress">&nbsp; Út Nữ</span><br>
             <span class="banner-name">Thiên Lý</span>
           </div>
                 <div class="banner-date">
@@ -104,7 +104,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="banner_date aos-init aos-animate" data-aos="fade" data-aos-duration="3000">26<br>11.2024</span>
           <span class="banner_month aos-init aos-animate" data-aos="fade-left" data-aos-duration="3000">11H00</span>
         </div>
-        <p class="invi_amlich">(Tức ngày 26 tháng 10 năm Giáp Thìn)</p><br>
+        <p class="invi_amlich">(Tức ngày 26 tháng 10 năm Giáp Thìn)</p>
         <div class="banner-location aos-init aos-animate" data-aos="fade-up" data-aos-duration="3000">
           <p class="banner_sub_location"></p>
           <p class="script-font">Hôn lễ được tổ chức tại</p>
