--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 		<meta property="og:image" content="./Photo/LAC05895.png">
-		<title>Phương Nam - Thiên Lý</title>
+		<title>Thiệp mời Phương Nam - Thiên Lý</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
 <link rel="dns-prefetch" href="//unpkg.com">
