--- a/index.html
+++ b/index.html
@@ -453,10 +453,11 @@ Huyện Thạch Hà - Tỉnh Hà Tĩnh</p>
    const firebaseConfig = {
   apiKey: "AIzaSyBjZlfSat-d3MKTgHMgnFo4-hCDv-wTgkw",
   authDomain: "namlys.firebaseapp.com",
+  databaseURL: "https://namlys-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "namlys",
   storageBucket: "namlys.firebasestorage.app",
   messagingSenderId: "573398370432",
-  appId: "1:573398370432:web:fef4efcd3b606ca0fffe65"
+  appId: "1:573398370432:web:5195b26650df2cf0fffe65"
 };
 
     // Khởi tạo Firebase
