--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <script src="./JS/jquery-core.js" id="jquery-core-js"></script>
 <script src="./JS/jquey-migrate.js" id="jquery-migrate-js"></script>
 <script src="./JS/jquery.js" id="Jquery-js"></script>
+<script src="./JS/main.js" id="main-js"></script>
 
 		<style type="text/css">
 					.site-title,
