--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Huyện Thạch Hà - Tỉnh Hà Tĩnh</p>
 </section>
 <!-- END ALBUM -->
 
-<section id="message" class="section-message uk-background-cover uk-section" style="background-image:url(./Photo/LAC05666.png); display:block">
+<section id="message" class="section-message uk-background-cover uk-section" style="background-image:url(.Photo/LAC05666.png); display:block">
   <div class="uk-position-cover uk-overlay uk-overlay-primary" style="opacity:.5"> </div>
   <div class="message-container container uk-position-relative uk-position-z-index">
     <h2 class="section-title uk-light" style="color:white">
@@ -394,38 +394,6 @@ Huyện Thạch Hà - Tỉnh Hà Tĩnh</p>
   window.onload = displayMessages;
 </script>
 
-
-#video {
-    padding: 80px 0;
-    background: var(--bg)
-}
-#video .section-title {
-    text-align:center;
-    color: var(--primary-color)
-}
-#video .subtitle {
-    text-align:center;
-}
-.video-container {
-    margin-top:40px
-}
-
-.video-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-}
-.video-list iframe {
-    aspect-ratio: 16/9;
-    width: 100%;
-    max-width: 768px;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0 0 0 /10%);
-}
-</style>
-<!-- END VIDEO -->
 
 <!-- GỬI QUÀ -->
 <section id="gift" class="section-gift" style="display:block">
