--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Huyện Thạch Hà - Tỉnh Hà Tĩnh</p>
 </section>
 <!-- END ALBUM -->
 
-<section id="message" class="section-message uk-background-cover uk-section" style="background-image:url(.Photo/LAC05666.png); display:block">
+<section id="message" class="section-message uk-background-cover uk-section" style="background-image:url(./Photo/LAC05666.png); display:block">
   <div class="uk-position-cover uk-overlay uk-overlay-primary" style="opacity:.5"> </div>
   <div class="message-container container uk-position-relative uk-position-z-index">
     <h2 class="section-title uk-light" style="color:white">
