--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 		<meta property="og:image" content="./Photo/LAC05895.png">
 		<title>Thiệp mời Phương Nam - Thiên Lý</title>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js"></script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-<script>
-  // Cấu hình Firebase của bạn
+  // Your web app's Firebase configuration
   const firebaseConfig = {
-     apiKey: "AIzaSyBjZlfSat-d3MKTgHMgnFo4-hCDv-wTgkw",
+    apiKey: "AIzaSyBjZlfSat-d3MKTgHMgnFo4-hCDv-wTgkw",
     authDomain: "namlys.firebaseapp.com",
     databaseURL: "https://namlys-default-rtdb.asia-southeast1.firebasedatabase.app",
     projectId: "namlys",
@@ -24,9 +25,8 @@
     appId: "1:573398370432:web:5195b26650df2cf0fffe65"
   };
 
-  // Khởi tạo Firebase
-  const app = firebase.initializeApp(firebaseConfig);
-  const database = firebase.database(app);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
 </script>
 
 	
