--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+  import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
 
   // Your web app's Firebase configuration
   const firebaseConfig = {
@@ -27,7 +26,59 @@
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
+  const database = getDatabase(app);
+
+  // Function to save the message to Firebase
+  function saveMessage(name, message) {
+    const newMessageRef = ref(database, 'messages/' + Date.now());
+    set(newMessageRef, {
+      name: name,
+      message: message
+    });
+  }
+
+  // Function to fetch and display messages
+  function displayMessages() {
+    const messagesRef = ref(database, 'messages');
+    get(messagesRef).then((snapshot) => {
+      if (snapshot.exists()) {
+        const messages = snapshot.val();
+        const messageList = document.querySelector('.list_message');
+        messageList.innerHTML = ""; // Clear existing messages
+        for (let key in messages) {
+          const message = messages[key];
+          const messageDiv = document.createElement('div');
+          messageDiv.classList.add('blur-bg', 'uk-padding-small', 'uk-border-rounded', 'uk-light');
+          messageDiv.innerHTML = `
+            <h3 class="user_message">${message.name}</h3>
+            <p class="message_body">${message.message}</p>
+          `;
+          messageList.appendChild(messageDiv);
+        }
+      } else {
+        console.log("No messages found.");
+      }
+    }).catch((error) => {
+      console.error("Error getting messages: ", error);
+    });
+  }
+
+  // Event listener for form submission
+  document.getElementById('messageForm').addEventListener('submit', (e) => {
+    e.preventDefault();
+    const name = document.getElementById('m_name').value;
+    const message = document.getElementById('m_text').value;
+    saveMessage(name, message);
+    document.getElementById('m_name').value = '';
+    document.getElementById('m_text').value = '';
+    displayMessages(); // Refresh the list after submission
+  });
+
+  // Display messages when the page loads
+  window.onload = displayMessages;
+
 </script>
+
 
 	
 <meta name="robots" content="max-image-preview:large">
